--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /* Set variables  */
 :root {
-    --dev-border: 1px;
+    --dev-border: 0px;
 }
 
 
@@ -35,7 +35,16 @@ ul {
     margin: auto; /* Even margin on left and right sides */
 }
 
+/* Menu btn */
 
+.menu-btn {
+    cursor: pointer;
+    position: absolute;
+    top: 20px;
+    right: 30px; 
+    z-index: 2;
+    display: none;
+}
 
 /* Nav */
 
@@ -190,6 +199,7 @@ ul {
 
 }
 
+/* Follow */
 .follow {
     display: flex;
     align-items: center;
@@ -200,4 +210,167 @@ ul {
 
 .follow * {
     margin-right: 10px;
+}
+
+/* Links */
+
+.links {
+    background: #f2f2f2;
+    color: #616161;
+    font-size: 12px;
+    padding: 35px 0; 
+}
+
+.links-inner{
+    border: var(--dev-border) blue dashed; 
+    width: 90%;
+    max-width: 1100px;
+    margin: auto;/* have even space on left and right */
+    /*
+    display: flex;
+    justify-content: space-evenly;
+    */
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    gap: 10px;
+    align-items: flex-start;
+    justify-content: center;
+
+}
+
+.links-inner ul {
+    border: var(--dev-border) blue dashed; 
+
+}
+
+.links-inner ul li  {
+    /*margin-bottom: 15px;*/
+    line-height: 2.8;
+}
+
+/* Footer */
+.main-footer {
+    background: #f2f2f2;
+    color: #616161;
+    font-size: 10px;
+
+}
+
+.footer-inner {
+    border: var(--dev-border) blue dashed; 
+    width: 90%;
+    max-width: 1100px;
+    margin: auto;/* have even space on left and right */
+    display: flex;
+    justify-content: space-between;    
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.footer-inner div {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.footer-inner div i {
+    margin-right: 10px;
+    
+}
+
+
+.footer-inner ul {
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 20px;
+    
+    
+}
+
+.footer-inner ul li {
+    padding-right: 20px;
+}
+
+
+/* Media query */
+
+@media(max-width: 700px) {
+
+    .menu-btn {
+        display: block;
+    }
+
+    .menu-btn:hover {
+        opacity: 0.5;
+    }
+
+    .main-nav ul.right-menu {
+        margin-right: 50px;
+    }
+
+    .main-nav ul.main-menu {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: #f2f2f2;
+        width: 50%;
+        height: 100%;
+        
+        border-right: #ccc 1px solid;
+        opacity: 0.9;
+        padding: 30px;
+
+        transform: translateX(-500px); /* Move it from the container to clear the space  */
+        transition: transform 0.5s ease-in-out;
+    }
+
+    .main-nav ul.main-menu li {
+        padding: 10px;
+        border-bottom: #ccc solid 1px ;
+        font-size: 14px;
+    }
+
+    .main-nav ul.main-menu li:last-child{
+        border-bottom: 0;
+    }
+
+    .main-nav ul.main-menu.show {
+        transform: translateX(-20px);
+    }
+
+    .home-cards {
+        grid-template-columns: repeat(2, 1fr); 
+    }
+
+    .xbox .content p {
+        display: none;
+    }
+
+    .xbox .content h2 {
+        margin-bottom: 20px;
+        width: 170px;
+    }
+
+    .carbon .content {
+        width: 85%;
+    }
+
+    .links .links-inner {
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media(max-width: 500px) {
+    .home-cards {
+        grid-template-columns: 1fr; 
+    }
+
+    .links .links-inner {
+        grid-template-columns: 1fr;
+    }
+
+    .links .links-inner ul {
+        margin-bottom: 20px;
+    }
 }
